--- a/wp-content/themes/Abogados/assets/css/tailwind.css
+++ b/wp-content/themes/Abogados/assets/css/tailwind.css
@@ -1,1 +1,93 @@
 @import "tailwindcss";
+
+@font-face {
+  font-family: "Noyh";
+  src: url("../noyh/Noyh-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Noyh";
+  src: url("../noyh/Noyh-LightItalic.ttf") format("truetype");
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Noyh";
+  src: url("../noyh/Noyh-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Noyh";
+  src: url("../noyh/Noyh-Italic.ttf") format("truetype");
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Noyh";
+  src: url("../noyh/Noyh-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Noyh";
+  src: url("../noyh/Noyh-MediumItalic.ttf") format("truetype");
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Noyh";
+  src: url("../noyh/Noyh-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Noyh";
+  src: url("../noyh/Noyh-BoldItalic.ttf") format("truetype");
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Noyh";
+  src: url("../noyh/Noyh-Heavy.ttf") format("truetype");
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Noyh";
+  src: url("../noyh/Noyh-Black.ttf") format("truetype");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Noyh";
+  src: url("../noyh/Noyh-BlackItalic.ttf") format("truetype");
+  font-weight: 900;
+  font-style: italic;
+  font-display: swap;
+}
+
+:root {
+  --font-sans: "Noyh", "Manrope", "Helvetica Neue", sans-serif;
+}
